fix(products): address review findings on PR #12
CRITICAL

- Field projection was unusable. ProductMapper requires ten fields to build a
  Product, but Erli lets a projection omit any of them, so the documented
  get(id, fields) threw. A projection is now widened with exactly those fields
  (ProductProjection); the expensive parts stay excluded. Covered by a test that
  maps a projected body -- the gap that hid this, since the old test stubbed 404.

- Wire-name literals left business logic. Each domain enum now carries its own
  wireName(); ProductEnums is lookup maps built from values(), so no wire string
  appears in code and no constant can be reachable in one direction only.
  ProductFieldNames and its two 58-case switches are gone.

- Renamed the 3-char loop variable to rawProduct/rawRequest/... matching the
  repo's existing rawShop/rawParcel convention.

- Guarded new BigDecimal(null) in the dictionary-id round trip: the read side
  legitimately yields an absent id, and NumberFormatException does not cover NPE.

- Paging on a non-unique sort silently dropped products: Erli's cursor is a
  strict bound, so rows sharing the last row's value were skipped. The walk now
  refuses to page past page one unless the sort is unique, and says why. A single
  page on any sort still works.

IMPORTANT

- Always send pagination.limit rather than inferring the server default, which
  the walk was comparing against to detect the last page.
- in/nin rejected on STATUS/ARCHIVED, which Erli's membership branch excludes.
- weight documented as grams, not kilograms (the spec says "w gramach").
- ProductPatch/ProductUpdateResult copy their sets instead of wrapping them.
- Live test decides idempotence by reading state, not by catching an exception:
  429 and 409 share a remediation group, so a throttled run could have passed as
  a successful re-run. Filed the 429 grouping as a core observation.
- Removed a duplicate test; renamed emptyPatch() which was not empty.

Tests 213, 0 fai